bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:2: error: value && is not a member of Int
  if (( (a<=0 && b>=0)||(a>=0 && b<=0)) || (negative && (a&&b)<=0)){
                                                          ^PosNeg:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (( (a<=0 && b>=0)||(a>=0 && b<=0)) || (negative && (a&&b)<=0)){
  ^